--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "css-loader": "^3.2.0",
+    "prettier": "^2.0.5",
     "ts-loader": "^5.4.5",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
