--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,7 @@
 {
-    "plugins": [
-        "babel-plugin-styled-components"
-    ],
-    "presets": [
-        [ "@babel/preset-env", { "targets": { "node": "current" } } ],
-        "@babel/preset-typescript"
-    ]
+  "plugins": ["babel-plugin-styled-components"],
+  "presets": [
+    ["@babel/preset-env", { "targets": { "node": "current" } }],
+    "@babel/preset-typescript"
+  ]
 }
