Add npm script for running prettier

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prettier": "prettier --write .",
     "start": "webpack-dev-server --open --hot --mode development",
     "build": "webpack"
   },
