--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "Spen",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
     "@tonaljs/chord": "^3.3.0",
     "@tonaljs/chord-dictionary": "^3.3.0",
     "@tonaljs/interval": "^3.2.3",
@@ -21,6 +20,7 @@
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
     "@types/styled-components": "^4.1.22",
+    "grommet": "^2.14.0",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
